--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,6 +42,8 @@
         "import/no-named-as-default": 0,
         "arrow-parens": 0,
         "import/prefer-default-export": 0,
-        "react/jsx-wrap-multilines": 0
+        "react/jsx-wrap-multilines": 0,
+        "no-param-reassign": 0,
+        "arrow-body-style": 0
     }
 }
